    3. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response. 
       This behavior matches that currently used by IE and Navigator.

Limitations: HttpUnit does not support JavaScript

                            
Revision History:

08-Jan-01
Acknowledgements:
    Thanks to Rocky Rhodes for finding the multiple cookie bug
Additions:
    1. Initial implementation of file upload capability
    
Problems corrected:
    1. Multiple cookies were not being sent correctly
    
01-Jan-01 1.2.1
Acknowledgements:
    Thanks to Toyoshi Ushio for helping with the handling of non-English scripts and for translating the home page and cookbook into Japanese.
    
Problems corrected:
    1. Content-type charset attribute is now recognized, allowing for the proper handling of non-ascii html pages.
    2. Form submissions now use the page character set encoding.
    3. Old format cookie headers (with the expires=attribute) are now recognized.
    
Additions:
    1. Introductory ServletUnit functionality (parameters and sessions, but no JSP, no forwarding)
    2. Added getTableWithID method to WebResponse, ParsedHTML
    3. Added HttpUnitOptions.setDefaultCharacterSet to handle missing content charset headers, so as not to assume default encoding (iso-8859-1).
    4. WebConversation now has a new public base class: WebClient
    5. Any message header may now be defined, using: WebClient.setHeaderField and will be sent on all subsequent requests
    6. Forms may now be retrieved by their name attributes, using WebResponse.getFormWithName()

16-Nov-00 1.2
Acknowledgements:
    Thanks to Robert Krueger for providing an interface to the xerces parser for XML web responses.
    Thanks to Marco Tamanti and Gabriele Antonelli for suggesting ways to support file URLs
    
Problems corrected:
    1. Unnamed parameters are no longer submitted as part of a form request