@@ -5,8 +5,8 @@
 <project name="httpunit" default="jar" basedir=".">
     <property name="name" value="httpunit" /> 
     <property name="Name" value="HttpUnit" /> 
-    <property name="version" value="1.2.1" />
-    <property name="zip_version" value="1_2_1" /> 
+    <property name="version" value="1.2.2" />
+    <property name="zip_version" value="1_2_2" /> 
     <property name="src.dir" value="src" /> 
     <property name="tstsrc.dir" value="test" /> 
     <property name="examples.dir" value="examples" /> 
