@@ -25,6 +25,8 @@ import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
+import java.util.Enumeration;
+import java.util.StringTokenizer;
 import java.util.Vector;
 
 
@@ -54,6 +56,31 @@ public class FormSubmitTest extends HttpUnitTest {
     }
 	
 	
+    public void testEmbeddedEquals() throws Exception {
+        defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
+                                  "<Input type=text name=\"age=x\" value=12>" +
+                                  "<Input type=submit>" +
+                                  "</form>" );
+        WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
+        WebForm form = page.getForms()[0];
+        WebRequest request = form.getRequest();
+        assertEquals( getHostPath() + "/ask?age%3Dx=12", request.getURL().toExternalForm() );
+    }
+
+
+    public void testEmptyChoiceSubmit() throws Exception {
+        defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
+                                  "<Input type=text name=age value=12>" +
+                                  "<select name=empty></select>" +
+                                  "<Input type=submit>" +
+                                  "</form>" );
+        WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
+        WebForm form = page.getForms()[0];
+        WebRequest request = form.getRequest();
+        assertEquals( getHostPath() + "/ask?age=12", request.getURL().toExternalForm() );
+    }
+
+
     public void testSubmitString() throws Exception {
         defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
                                   "<Input type=text name=age>" +
@@ -112,7 +139,7 @@ public class FormSubmitTest extends HttpUnitTest {
         WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
         WebForm form = page.getForms()[0];
         WebRequest request = form.getRequest();
-        assertEquals( getHostPath() + "/ask?update=name&update.y=0&update.x=0&age=12", request.getURL().toExternalForm() );
+        assertEqualQueries( getHostPath() + "/ask?update=name&update.y=0&update.x=0&age=12", request.getURL().toExternalForm() );
     }
 
                               
@@ -136,7 +163,7 @@ public class FormSubmitTest extends HttpUnitTest {
         WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
         WebForm form = page.getForms()[0];
         WebRequest request = form.getRequest( form.getSubmitButton( "update" ), 10, 15 );
-        assertEquals( getHostPath() + "/ask?update=name&update.y=15&update.x=10&age=12", request.getURL().toExternalForm() );
+        assertEqualQueries( getHostPath() + "/ask?update=name&update.y=15&update.x=10&age=12", request.getURL().toExternalForm() );
     }
 
                               
@@ -262,6 +289,50 @@ public class FormSubmitTest extends HttpUnitTest {
         }
     }
 
+
+    protected void assertEqualQueries( String query1, String query2 ) {
+        assertEquals( new QuerySpec( query1 ), new QuerySpec( query2 ) );
+    }
+
+
+    static class QuerySpec {
+        QuerySpec( String urlString ) {
+            if (urlString.indexOf( '?' ) < 0) {
+                _path = urlString;
+            } else {
+                _path = urlString.substring( 0, urlString.indexOf( '?' ) );
+            }
+            _fullString = urlString;
+            
+            StringTokenizer st = new StringTokenizer( urlString.substring( urlString.indexOf( '?' )+1 ), "&" );
+            while (st.hasMoreTokens()) _parameters.addElement( st.nextToken() );
+        }
+
+        public String toString() {
+            return _fullString;
+        }
+
+        public boolean equals( Object o ) {
+            return getClass().equals( o.getClass() ) && equals( (QuerySpec) o );
+        }
+
+        private String _path;
+        private String _fullString;
+        private Vector _parameters = new Vector();
+
+        private boolean equals( QuerySpec o ) {
+            if (!_path.equals( o._path )) {
+                return false;
+            } else if (_parameters.size() != o._parameters.size() ) {
+                return false;
+            } else {
+                for (Enumeration e = o._parameters.elements(); e.hasMoreElements();) {
+                    if (!_parameters.contains( e.nextElement() )) return false;
+                }
+                return true;
+            }
+        }
+    }
                               
 //---------------------------------------------- private members ------------------------------------------------
 
