@@ -40,7 +40,6 @@ public class HttpUnitSuite {
         suite.addTest( WebLinkTest.suite() );
         suite.addTest( HtmlTablesTest.suite() );
         suite.addTest( WebFormTest.suite() );
-        suite.addTest( WebFrameTest.suite() );
         suite.addTest( RequestTargetTest.suite() );
         suite.addTest( FormParametersTest.suite() );
         suite.addTest( FormSubmitTest.suite() );
